BuildHughes/translation-tool/inputs/source_meta/objects/YAHS_SLAConfiguration__c.object
<CustomObject>
    <fields>
        <fullName>YAHS_1stResponse__c</fullName>
        <label>First Response (Time in Min)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YAHS_2nd_Response__c</fullName>
        <label>Second Response (Time in Min)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YAHS_Acknowledgement__c</fullName>
        <label>Acknowledgement (Time in Min)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YAHS_EffectiveDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>YAHS_ExpiryDate__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>YAHS_Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>Major</fullName>
                </value>
                <value>
                    <fullName>Minor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YAHS_Tier3__c</fullName>
        <label>Tier 3 Case closure (Time in Min)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SLA Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>YAHS_Priority__c</columns>
        <columns>YAHS_Acknowledgement__c</columns>
        <columns>YAHS_1stResponse__c</columns>
        <columns>YAHS_2nd_Response__c</columns>
        <columns>YAHS_Tier3__c</columns>
        <columns>YAHS_EffectiveDate__c</columns>
        <columns>YAHS_ExpiryDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SLAC-{0000}</displayFormat>
        <label>SLA Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SLA Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ExpiryDateCannotBeSetUpInPast</fullName>
        <active>true</active>
        <description>This validation rule ensures that the expiry date is set in future and is greater that the effective date</description>
        <errorConditionFormula>OR(YAHS_ExpiryDate__c  &lt; TODAY(),YAHS_ExpiryDate__c&lt;YAHS_EffectiveDate__c)</errorConditionFormula>
        <errorDisplayField>YAHS_ExpiryDate__c</errorDisplayField>
        <errorMessage>Expiry Date cannot be set in past and cannot be less than the effective date</errorMessage>
    </validationRules>
</CustomObject>